--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gulp",
+  "name": "pedri.to",
   "version": "1.0.0",
-  "description": "",
+  "description": "A modern URL shortener",
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js"
@@ -21,7 +21,9 @@
   	"method-override": "^3.0.0",
   	"mongoose": "^5.10.7",
   	"passport": "^0.4.1",
-  	"passport-local": "^1.0.0",
+  	"passport-local": "^1.0.0"
+  }, 
+  "devDependencies": {
     "nodemon": "^2.0.4"
   }
 }
