--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A modern URL shortener",
   "main": "index.js",
   "scripts": {
-    "start": "src/index.js",
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
   "author": "",
@@ -19,8 +19,8 @@
   	"connect-flash": "^0.1.1",
   	"body-parser": "^1.19.0",
   	"bcryptjs": "^2.4.3",
-  	"method-override": "^3.0.0",
   	"mongoose": "^5.10.7",
+  	"method-override": "^3.0.0",
   	"passport": "^0.4.1",
   	"passport-local": "^1.0.0"
   }, 
